Verschönert den Quelltext.

--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -707,17 +707,18 @@ exponentielle Komplexität $\mathcal{O}(2^n)$. Dazu ein Rechenbeispiel:
   richtigen Lösung aus der Menge der möglichen Lösungen auf die Bestimmung des
   diskreten Logarithmus hat. Angenommen, aufgrund göttlicher Fügung, rät eine
   Person oder ein Algorithmus zu Beginn der Berechnung des diskreten Logarithmus
-  zufällig eine Position $a$ (siehe Abb. \ref{fig:logRaten}) auf dem Zahlenstrahl, die von der richtigen Lösung
-  $b$ lediglich um den Betrag $d$ abweicht, dem 10-Milliardstel Teil ($=
-  1/10^{10}$) von der gesamten Anzahl der möglichen Lösungen $\left| \Z_p^*
-  \right| = (p-2)$, um dann (zufällig) weiter in die richtige Richtung nach der
-  Lösung zu suchen. Dann wären mit der obigen Rechenleistung von 10 Milliarden
-  speziellen Prozessoren noch rund 14 Jahre nötig, um die richtige Lösung $b$ zu
-  bestimmen. Man wüsste also auch erst nach 14 Jahren, dass man \emph{sehr gut}
-  geraten hat und dann wurden mit dem zufällig erratenen Schlüssel vermutlich
-  nicht die begehrten Atomkodes des Gegners, sondern womöglich nur eine
-  unwichtige Einkaufsliste verschlüsselt. Man kann also davon ausgehen, dass das
-  Erraten der richtigen Lösung des diskreten Logarithmus kaum funktioniert.
+  zufällig eine Position $a$ (siehe Abb.~\ref{fig:logRaten}) auf dem
+  Zahlenstrahl, die von der richtigen Lösung $b$ lediglich um den Betrag $d$
+  abweicht, dem 10-Milliardstel Teil ($= 1/10^{10}$) von der gesamten Anzahl der
+  möglichen Lösungen $\left| \Z_p^* \right| = p-1$, um dann (zufällig) weiter
+  in die richtige Richtung nach der Lösung zu suchen. Dann wären mit der obigen
+  Rechenleistung von 10 Milliarden speziellen Prozessoren noch rund 14 Jahre
+  nötig, um die richtige Lösung $b$ zu bestimmen. Man wüsste also auch erst nach
+  14 Jahren, dass man \emph{sehr gut} geraten hat und dann wurden mit dem
+  zufällig erratenen Schlüssel vermutlich nicht die begehrten Atomkodes des
+  Gegners, sondern womöglich nur eine unwichtige Einkaufsliste verschlüsselt.
+  Man kann also davon ausgehen, dass das Erraten der richtigen Lösung des
+  diskreten Logarithmus kaum funktioniert.
 
   \begin{figure}[H]
     \centering
@@ -922,7 +923,7 @@ Vorgehensweise in Pseudocode.
     Vanstone, Scott A.,
     \textit{Handbook of applied cryptography},
     CRC Press,
-    1 edition,
+    1st edition,
     1996
 \end{thebibliography}
 
